Updated for new Google Charts Api
- replaced jsapi with jstatic
- support of google maps api keys

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "Scott Huang",
             "email": "zhiliang.huang@gmail.com"
+        },
+        {
+          "name": "Stanislav Tyshchenko",
+          "email": "s.tyshchenko@icloud.com"
         }
     ],
   "support": {
